--- a/src/Metronome.css
+++ b/src/Metronome.css
@@ -6,15 +6,29 @@
 }
 
 body{
-    background-color: #000;
-    color: #eee;
+    margin: 0 auto;
+    padding: 0;
 }
 .metronome {
     text-align: center;
-    max-width: 375px;
+    width: auto;
+    height: 100vh;
     margin: 0 auto;
-    padding: 30px;
+    display: flex;
+}
+
+.ad-App{
     padding-top: 150px;
+    background-color: black;
+    padding-left: 10vh;
+    padding-right: 10vh;
+    color: #eee;
+    flex: 0.4;
+}
+
+.circle{
+    background-color: #eee;
+    flex:1
 }
 .title{
     font-size: 50px;
@@ -45,23 +59,6 @@ body{
     outline: none;
 }
 
-.select-beat{
-    display: block;
-    font-size: 16px;
-    font-family: 'Arial', sans-serif;
-    font-weight: 400;
-    color: #444;
-    text-align: center;
-    line-height: 1.3;
-    padding: .4em 1.4em .3em .8em;
-    width: 50px;
-    max-width: 100%; 
-    box-sizing: border-box;
-    margin: 0 auto;
-    -moz-appearance: none;
-    -webkit-appearance: none;
-}
-
 .bpm-slider{
     display: flex;
     align-items: center;
@@ -80,18 +77,9 @@ body{
     outline: none;
 }
 
-.bpm-slider-input::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    width: 18px;
-    height: 18px;
-    border: 4px solid #fff;
-    background: color(var(--ad-Color-prim) l(+10%));
-    border-radius: 50%;
-    cursor: pointer;
-    transition: border .2s;
-}
-
-.bpm-slider-input::-moz-range-thumb {
+.bpm-slider-input::-webkit-slider-thumb,
+.bpm-slider-input::-moz-range-thumb
+ {
     -webkit-appearance: none;
     width: 18px;
     height: 18px;
@@ -102,24 +90,16 @@ body{
     transition: border .2s;
 }
 
-.bpm-slider-input:hover::-webkit-slider-thumb{
-    border-color: var(--ad-Color-sec);
-}
-.bpm-slider-input:focus::-webkit-slider-thumb {
-    border-color: var(--ad-Color-sec);
-    outline: none;
-}
-.bpm-slider-input:hover::-moz-range-thumb{
-    border-color: var(--ad-Color-sec);
-}
+.bpm-slider-input:hover::-webkit-slider-thumb, 
+.bpm-slider-input:focus::-webkit-slider-thumb,
+.bpm-slider-input:hover::-moz-range-thumb,
 .bpm-slider-input:focus::-moz-range-thumb {
     border-color: var(--ad-Color-sec);
-    outline: none;
 }
 
 .choices{
     display: flex;
-    /*width: 12rem;*/
+    width: 12rem;
     align-content: center;
 }
 .choice{
@@ -129,7 +109,7 @@ body{
     display: none;
 }
 .choice-fake {
-    padding: .6rem;
+    padding: .8rem;
     background: #444;
     border: 4px solid transparent;
     transition: border .2s;
